[package]
name = "syslib"
version = "0.0.0"
description = "Use the Linux ABI on Rust, without C."
edition = "2021"
readme = "readme.md"
repository = "https://github.com/AidoP/syslib"

[[example]]
name = "hello_world"

[features]
default = ["std"]
std = []

[dependencies]
syslib-macro = { path = "syslib-macro" }
