[package]
name = "syslib-macro"
version = "0.0.0"
description = "Macros for syslib."
edition = "2021"
license = "MIT"
readme = "../readme.md"
repository = "https://github.com/AidoP/syslib"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"